# source-bottlerocket-v1.50.0

./: .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  Makefile.toml  PROVISIONING-METAL.md  PUBLISHING.md  QUICKSTART-ECS.md  QUICKSTART-EKS.md  QUICKSTART-VMWARE.md  README.md  Release.toml  SECURITY_GUIDANCE.md  TESTING.md  Twoliter.toml
.github/actions/setup-node/: action.yml
.github/workflows/: build.yml  cache.yml  rust_build_docs.yml  weekly.yml
docs/: Cargo.toml  README.md
docs/src/: main.rs
docs/src/app/: startup_rust_rover.rs
docs/src/basic/: e00_module.md  e01_string.rs  e02_array.rs  e03_slice.rs  (+10 more)
sbkeys/: README.md  generate-aws-sbkeys
sources/: Cargo.toml  deny.toml
sources/api/datastore/src/: lib.rs
sources/api/datastore/src/deserialization/: pairs.rs
sources/api/datastore/src/serialization/: mod.rs  pairs.rs
sources/api/migration/migration-helpers/: Cargo.toml
sources/api/migration/migration-helpers/src/: args.rs  common_migrations.rs  error.rs
sources/settings-defaults/aws-k8s-1.31-nvidia/defaults.d/: 82-nvidia-k8s-device-plugin-legacy.toml
sources/settings-defaults/aws-k8s-1.33/: Cargo.toml
sources/settings-defaults/aws-k8s-1.33-nvidia/: Cargo.toml
sources/settings-defaults/aws-k8s-1.33/defaults.d/: 56-kubernetes-seccomp-default-true.toml
sources/settings-defaults/aws-k8s-1.34/: Cargo.toml
sources/settings-defaults/aws-k8s-1.34-nvidia/: Cargo.toml
sources/settings-defaults/aws-k8s-1.34-nvidia/defaults.d/: 58-kubernetes-graceful-shutdown.toml  82-nvidia-k8s-device-plugin-cdi.toml
sources/settings-defaults/vmware-k8s-1.33/: Cargo.toml
sources/settings-defaults/vmware-k8s-1.34/: Cargo.toml
sources/settings-migrations/v1.34.0/kubelet-device-plugins-mig-settings/src/: main.rs
sources/settings-migrations/v1.36.0/kubernetes-ecr-credential-providers-expansion/: Cargo.toml
sources/settings-migrations/v1.36.0/kubernetes-ecr-credential-providers-expansion/src/: main.rs
sources/settings-migrations/v1.37.0/delete-configs-and-services-on-downgrade/: Cargo.toml
sources/settings-migrations/v1.37.0/delete-configs-and-services-on-downgrade/src/: main.rs
sources/settings-migrations/v1.39.0/kubelet-setting-container-log-single-process-oom-kill/: Cargo.toml
sources/settings-migrations/v1.39.0/kubelet-setting-container-log-single-process-oom-kill/src/: main.rs
sources/settings-migrations/v1.40.0/kubelet-device-plugins-cdi-settings/: Cargo.toml
sources/settings-migrations/v1.40.0/kubelet-device-plugins-cdi-settings/src/: main.rs
sources/settings-migrations/v1.41.0/kubernetes-ecr-credential-providers-correction/: Cargo.toml
sources/settings-migrations/v1.41.0/kubernetes-ecr-credential-providers-correction/src/: main.rs
sources/settings-migrations/v1.42.0/kubernetes-memory-swap-behavior-setting/: Cargo.toml
sources/settings-migrations/v1.42.0/kubernetes-memory-swap-behavior-setting/src/: main.rs
sources/settings-migrations/v1.44.0/container-runtime-plugins-settings/: Cargo.toml
sources/settings-migrations/v1.44.0/container-runtime-plugins-settings/src/: main.rs
sources/settings-migrations/v1.44.0/container-runtime-snapshotter-setting/: Cargo.toml
sources/settings-migrations/v1.44.0/container-runtime-snapshotter-setting/src/: main.rs
sources/settings-migrations/v1.46.0/kubernetes-static-pods-enabled-setting/: Cargo.toml
sources/settings-migrations/v1.46.0/kubernetes-static-pods-enabled-setting/src/: main.rs
sources/settings-migrations/v1.47.0/container-runtime-concurrent-download-chunk-size/: Cargo.toml
sources/settings-migrations/v1.47.0/container-runtime-concurrent-download-chunk-size/src/: main.rs
sources/settings-migrations/v1.47.0/host-bootstrap-containers-command-setting/: Cargo.toml
sources/settings-migrations/v1.47.0/host-bootstrap-containers-command-setting/src/: main.rs
sources/settings-migrations/v1.49.0/kubernetes-reserved-pid-settings/src/: main.rs
sources/settings-migrations/v1.50.0/kubernetes-reserved-pid-settings/: Cargo.toml
sources/settings-plugins/aws-k8s-nvidia/src/: lib.rs
sources/settings-plugins/aws-k8s/src/: lib.rs
sources/settings-plugins/vmware-k8s/src/: lib.rs
sources/shared-defaults/: aws-bootstrap-container.toml  aws-host-containers.toml  kubernetes-aws-credential-provider.toml  kubernetes-services.toml  public-bootstrap-containers.toml  public-host-containers.toml
tools/pubsys/: Infra.toml.example
tools/startup_rust_rover/: Cargo.toml  README.md
variants/: README.md
variants/aws-ecs-1/: Cargo.toml
variants/aws-ecs-1-nvidia/: Cargo.toml
variants/aws-ecs-2-nvidia/: Cargo.toml
variants/aws-k8s-1.28/: Cargo.toml
variants/aws-k8s-1.28-fips/: Cargo.toml
variants/aws-k8s-1.28-nvidia/: Cargo.toml
variants/aws-k8s-1.29/: Cargo.toml
variants/aws-k8s-1.29-fips/: Cargo.toml
variants/aws-k8s-1.29-nvidia/: Cargo.toml
variants/aws-k8s-1.30/: Cargo.toml
variants/aws-k8s-1.30-fips/: Cargo.toml
variants/aws-k8s-1.30-nvidia/: Cargo.toml
variants/aws-k8s-1.31/: Cargo.toml
variants/aws-k8s-1.31-fips/: Cargo.toml
variants/aws-k8s-1.31-nvidia/: Cargo.toml
variants/aws-k8s-1.32/: Cargo.toml
variants/aws-k8s-1.32-fips/: Cargo.toml
variants/aws-k8s-1.32-nvidia/: Cargo.toml
variants/aws-k8s-1.33/: Cargo.toml
variants/aws-k8s-1.33-fips/: Cargo.toml
variants/aws-k8s-1.33-nvidia/: Cargo.toml
variants/aws-k8s-1.34/: Cargo.toml  amispec.toml
variants/aws-k8s-1.34-fips/: Cargo.toml
variants/aws-k8s-1.34-nvidia/: Cargo.toml
variants/shared/: amispec-split.toml
variants/vmware-k8s-1.28/: Cargo.toml
variants/vmware-k8s-1.28-fips/: Cargo.toml
variants/vmware-k8s-1.29/: Cargo.toml
variants/vmware-k8s-1.29-fips/: Cargo.toml
variants/vmware-k8s-1.30/: Cargo.toml
variants/vmware-k8s-1.30-fips/: Cargo.toml
variants/vmware-k8s-1.31/: Cargo.toml
variants/vmware-k8s-1.31-fips/: Cargo.toml
variants/vmware-k8s-1.32/: Cargo.toml
variants/vmware-k8s-1.32-fips/: Cargo.toml
variants/vmware-k8s-1.33/: Cargo.toml
variants/vmware-k8s-1.33-fips/: Cargo.toml
variants/vmware-k8s-1.34/: Cargo.toml
variants/vmware-k8s-1.34-fips/: Cargo.toml
(+2 files in other folders)
