[workspace]
resolver = "1"
members = [
    "packages/settings-defaults",
    "packages/settings-plugins",

    "variants/aws-dev",
    "variants/aws-ecs-2",
    "variants/aws-ecs-2-fips",
    "variants/aws-ecs-2-nvidia",
    "variants/aws-k8s-1.28",
    "variants/aws-k8s-1.28-fips",
    "variants/aws-k8s-1.29",
    "variants/aws-k8s-1.29-fips",
    "variants/aws-k8s-1.30",
    "variants/aws-k8s-1.30-fips",
    "variants/aws-k8s-1.31",
    "variants/aws-k8s-1.31-fips",
    "variants/aws-k8s-1.32",
    "variants/aws-k8s-1.32-fips",
    "variants/aws-k8s-1.33",
    "variants/aws-k8s-1.33-fips",
    "variants/aws-k8s-1.34",
    "variants/aws-k8s-1.34-fips",
    "variants/aws-k8s-1.28-nvidia",
    "variants/aws-k8s-1.29-nvidia",
    "variants/aws-k8s-1.30-nvidia",
    "variants/aws-k8s-1.31-nvidia",
    "variants/aws-k8s-1.32-nvidia",
    "variants/aws-k8s-1.33-nvidia",
    "variants/aws-k8s-1.34-nvidia",
    "variants/metal-dev",
    "variants/vmware-dev",
    "variants/vmware-k8s-1.28",
    "variants/vmware-k8s-1.28-fips",
    "variants/vmware-k8s-1.29",
    "variants/vmware-k8s-1.29-fips",
    "variants/vmware-k8s-1.30",
    "variants/vmware-k8s-1.30-fips",
    "variants/vmware-k8s-1.31",
    "variants/vmware-k8s-1.31-fips",
    "variants/vmware-k8s-1.32",
    "variants/vmware-k8s-1.32-fips",
    "variants/vmware-k8s-1.33",
    "variants/vmware-k8s-1.33-fips",
    "variants/vmware-k8s-1.34",
    "variants/vmware-k8s-1.34-fips",
]

[profile.dev]
debug = false
opt-level = 'z'

[profile.dev.build-override]
opt-level = 'z'
