[package]
name = "kubernetes-memory-swap-behavior-setting"
version = "0.1.0"
authors = ["Jan Teske <jteske@posteo.net>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
migration-helpers.workspace = true
