[package]
name = "container-runtime-snapshotter-setting"
version = "0.1.0"
authors = ["Gavin Inglis <giinglis@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
migration-helpers.workspace = true
