[package]
name = "kubernetes-reserved-pid-settings"
version = "0.1.0"
authors = ["Kush Upadhyay <kushupad@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
migration-helpers.workspace = true
